--- a/scss/main.scss
+++ b/scss/main.scss
@@ -271,12 +271,13 @@ body.no-scroll .fp-overlay {
     display: block;
   }
 }
+
 // Animated icon:
 .loading-spinner {
   position: relative;
-  margin: 0 auto;
-  width: 50px;
-  height: 50px;
+  margin: 15px auto;
+  width: 40px;
+  height: 40px;
 }
 .loading-spinner:before {
   content: '';
